--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "@types/smoothscroll-polyfill": "^0.3.1",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-unused-imports": "^1.1.3"
   },
   "browserslist": {
     "production": [
