--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "eslint": "eslint src --fix"
+    "fix": "eslint src --fix"
   },
   "author": "framemuse",
   "license": "MIT",
@@ -15,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fetching-library": "^1.7.6",
+    "react-nuts": "^0.0.47",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
@@ -25,6 +27,8 @@
     "timeago-react": "^3.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-typescript": "^7.15.0",
+    "@types/node": "^16.6.1",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
