--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
-    "composite": true,
     "experimentalDecorators": true,
-    "target": "ES5",
+    "target": "ES2021",
     "baseUrl": "src",
     "lib": [
       "dom",
-      "ES5",
-      "ES6",
+      "ES7",
       "ESNext"
     ],
     "noImplicitAny": true,
@@ -25,6 +23,7 @@
     "removeComments": true,
     "sourceMap": true,
     "noEmit": true,
+    "declaration": false,
     "emitDecoratorMetadata": true,
     "jsx": "react-jsx",
     "allowJs": true,
@@ -34,10 +33,8 @@
     "typeRoots": ["@types"]
   },
   "typeAcquisition": {
-    "include": [
-      "node"
-    ]
+    "include": ["node", "react"]
   },
-  "include": ["src/**/*", "src/**/*.json", "@types/*"],
+  "include": ["src", "@types/**/*"],
   "exclude": ["node_modules"]
 }
