Gcloud deploy build fix

--- a/app.yaml
+++ b/app.yaml
@@ -12,4 +12,4 @@ handlers:
   - url: /.*
     secure: always
     redirect_http_response_code: 301
-    script: "npm build"
+    script: "npm run build"
