--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sass": "^1.37.5",
     "smoothscroll-polyfill": "^0.4.4",
     "socket.io-client": "^4.1.3",
-    "timeago-react": "^3.0.3"
+    "timeago-react": "^3.0.3",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.15.0",
