--- a/app.yaml
+++ b/app.yaml
@@ -1,15 +1,26 @@
-runtime: nodejs # or another supported version
-env: flex
+runtime: nodejs16 # or another supported version
+# env: flex
+automatic_scaling:
+  max_instances: 1
+# manual_scaling:
+#   instances: 1
+# resources:
+#   cpu: 1
+#   memory_gb: 0.9
+#   disk_size_gb: 10
 
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.9
-  disk_size_gb: 10
+# handlers:
+#   - url: /.*
+#     secure: always
+#     redirect_http_response_code: 301
+#     script: auto
 
 handlers:
+  # Serve all static files with url ending with a file extension
+  - url: /(.*\..+)$
+    static_files: build/\1
+    upload: build/(.*\..+)$
+  # Catch all handler to index.html
   - url: /.*
-    secure: always
-    redirect_http_response_code: 301
-    script: auto
+    static_files: build/index.html
+    upload: build/index.html
