--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "react-scripts build -- --profile",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "fix": "eslint src --fix"
   },
@@ -18,7 +17,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fetching-library": "^1.7.6",
-    "react-nuts": "^0.0.47",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
